--- a/app/styles/components/_global.scss
+++ b/app/styles/components/_global.scss
@@ -97,6 +97,7 @@ section {
   width: 100%;
   height: 5px;
   background-color: $red;
+  margin-top: 50px;
   // margin: 15px 0;
 }
 
