--- a/app/styles/components/_modules/_quotes.scss
+++ b/app/styles/components/_modules/_quotes.scss
@@ -25,3 +25,10 @@
 
   }
 }
+
+.collapse-link {
+  margin: 15px;
+  a {
+    color: $red;
+  }
+}
