--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -96,6 +96,7 @@ section {
   width: 100%;
   height: 5px;
   background-color: #e1261c;
+  margin-top: 50px;
 }
 
 .centered {
@@ -248,6 +249,13 @@ section {
   .quote .quote-content:last-of-type {
     margin-bottom: 35px;
   }
+}
+
+.collapse-link {
+  margin: 15px;
+}
+.collapse-link a {
+  color: #e1261c;
 }
 
 /**
@@ -450,6 +458,7 @@ h4 {
 
 #controls h1 {
   color: white;
+  margin-top: 10px;
 }
 
 #vidpause {
@@ -460,8 +469,9 @@ h4 {
 #square {
   height: 100px;
   width: 100px;
+  background-size: contain;
+  margin-bottom: 20px;
+  background-image: url("../../../assets/img/play.png");
   z-index: 2;
   margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 100%;
 }
